# proxy

./: .ct.yaml  .gitignore  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  SECURITY.md  cipherstash-proxy-example.toml  cipherstash-proxy.sh  docker-compose.yml  docker-entrypoint.sh  localhost-key.pem  localhost.pem  mise.local.example.toml  mise.local.toml  mise.toml  preflight.sh  proxy.Dockerfile
.claude/commands/: commit.md
.github/: PULL_REQUEST_TEMPLATE.md  secrets.env.encrypted  secrets.env.tpl
.github/ISSUE_TEMPLATE/: docs-feedback.yml
.github/actions/send-slack-notification/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-test/: action.yml
.github/workflows/: benchmark.yml  lint-test-chart.yml  release-aws-marketplace.yml  release-chart.yml  release.yml  rust-check.yml  test-rust.yml.disabled  test.yml
.mise/tasks/test/: run
charts/cipherstash-proxy/: Chart.yaml  README.md  values.yaml
charts/cipherstash-proxy/ci/: CHART_TESTING.md  HELM_RELEASE_PROCESS.md  test-values.yaml  test-values.yaml.template
charts/cipherstash-proxy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service-metrics.yaml  service.yaml  serviceaccount.yaml
charts/cipherstash-proxy/templates/tests/: test-connection.yaml
dev/bench/: data.js
docs/: README.md  SLOW_STATEMENTS.md  data.js  encrypt-tool.md  errors.md  how-to.md  message-flow.md  reference.md  searchable-json.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/getting-started/: data-example.sql  schema-example.sql
docs/how-to/: index.md
docs/k6/: data.js
docs/k6/latency/: data.js
docs/k6/throughput/: data.js
docs/pgbench/: data.js
docs/plans/: 2025-12-04-postgresql-version-matrix-design.md  2026-04-01-migrate-to-canonical-encryption-config.md  2026-04-01-proxy-backwards-compat-tests.md  2026-07-20-eql-v3-type-checker-handoff.md
docs/reference/: encrypt-tool.md  index.md  message-flow.md  searchable-json.md
docs/sql/: commands.sql  schema-example.sql
k8s/base/: proxy-deployment.yaml  proxy-metrics-service.yaml  proxy-service.yaml
npm/: .gitignore  README.md  build-binaries.sh  demo.sh  release-workflow.example.yml
scripts/: decrypt-secrets.ts  encrypt-secrets.ts  package-lock.json  package.json
scripts/mem-repro/: README.md  go.mod  run-docker.sh  run.sh  sample-rss.sh  schema.sql  soak.sh  summary.md
scripts/mem-repro/loadgen/: main.go
scripts/mem-repro/prepleak/: main.go
src/: error.rs  lib.rs  main.rs
src/config/: config_manager.rs  dataset.rs  dataset_manager.rs  encrypt_config.rs  mod.rs  schema_manager.rs  tandem.rs
src/config/sql/: select_aggregates.sql  select_table_schemas.sql
src/connect/: async_stream.rs  mod.rs
src/context/: mod.rs
src/encrypt/: config.rs  mod.rs
src/eql/: mod.rs
src/postgresql/: backend.rs  bind.rs  frontend.rs  mod.rs  parse.rs  protocol.rs  query.rs  startup.rs
src/postgresql/messages/: bind.rs  mod.rs  parse.rs  query.rs
src/sqlserver/: mod.rs  sqlserver.sql
src/tcp/: mod.rs
src/tls/: mod.rs
tests/: README.md  cipherstash-proxy-bad-dataset.toml  docker-compose.yml  mise.tcp.toml  mise.tls.toml  mise.toml  schema_manager.rs  setup.sql  test_bind.rs  test_load_dataset.rs  test_query.rs  test_tls.rs  tls.rs
tests/benchmark/: mise.toml  plot.py
tests/benchmark/k6/: Dockerfile
tests/benchmark/sql/: benchmark-schema-v3.sql  benchmark-schema.sql  transaction-encrypted.sql  transaction-plaintext.sql
tests/benchmark/tasks/: benchmark_service.sh  k6_run.sh  pgbench.sh
tests/common/: mod.rs
tests/config/: cipherstash-proxy-bad-dataset.toml
tests/integration/elixir_test/: README.md  mix.exs
tests/integration/golang/: Dockerfile  README.md  go.mod  go.sum  jsonb_test.go  pgx_test.go
tests/pg/: common.env  pg_hba-tls.conf  postgresql-tls.conf  postgresql.conf  tls-postgresql.conf
tests/python/: .gitignore  Dockerfile  README.md  pyproject.toml  python.Dockerfile
tests/python/tests/: test_async.py  test_disable_mapping.py  test_error_messages.py  test_error_messsages.py  test_jsonb_array_elements.py  test_jsonb_array_length.py  test_jsonb_ops.py  test_jsonb_path_exists.py  test_jsonb_path_query.py  test_jsonb_path_query_first.py  test_jsonb_select_where_cmp.py  test_jsonb_select_where_eq.py  test_mapping_params.py
tests/sql/: schema-uninstall.sql  schema-v3-uninstall.sql  schema-v3.sql  schema.sql
tests/tasks/test/: psql-tcp.sh  psql-tls.sh
tests/tls/: server.cert  server.key
(+32 files in other folders)
