[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "2.0.0"
edition = "2021"

[profile.dev]
incremental = true
debug = true

# [profile.dev.package]# aws-lc-sys.opt-level = 3
# proc-macro2.opt-level = 3
# quote.opt-level = 3
# serde_derive.opt-level = 3
# sqlparser.opt-level = 3
# syn.opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.test]
incremental = true
debug = true

#  Default release profile (https://doc.rust-lang.org/cargo/reference/profiles.html)
[profile.release]
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true

[workspace.dependencies]
sqltk = { version = "0.8.0" }
thiserror = "2.0.9"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "ansi",
  "json",
  "env-filter",
  "std",
] }
