[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "2.1.21"
edition = "2021"

[profile.dev]
incremental = true
debug = true
opt-level = 0
split-debuginfo = "unpacked" # or "unpacked" on macOS

[profile.dev.package.sqltk]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # or "unpacked" on macOS

# [profile.dev.package]# aws-lc-sys.opt-level = 3
# proc-macro2.opt-level = 3
# quote.opt-level = 3
# serde_derive.opt-level = 3
# sqlparser.opt-level = 3
# syn.opt-level = 3

# [profile.dev.build-override]
# opt-level = 3

[profile.test]
incremental = true
debug = true

#  Default release profile (https://doc.rust-lang.org/cargo/reference/profiles.html)
[profile.release]
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true

[workspace.dependencies]
sqltk = { version = "0.10.0" }
cipherstash-client = { version = "0.33.0" }
cts-common = { version = "0.4.1" }

thiserror = "2.0.9"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "^0.3.20", features = [
  "ansi",
  "json",
  "env-filter",
  "std",
] }
