[workspace]
resolver = "2"
members = ["packages/*"]
# Vendored crate is consumed only via [patch.crates-io] below, not as a member.
exclude = ["vendor/stack-auth"]

[workspace.package]
version = "2.2.3"
edition = "2021"

[profile.dev]
incremental = true
debug = true
opt-level = 0
split-debuginfo = "unpacked" # or "unpacked" on macOS

[profile.dev.package.sqltk]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # or "unpacked" on macOS

# [profile.dev.package]# aws-lc-sys.opt-level = 3
# proc-macro2.opt-level = 3
# quote.opt-level = 3
# serde_derive.opt-level = 3
# sqlparser.opt-level = 3
# syn.opt-level = 3

# [profile.dev.build-override]
# opt-level = 3

[profile.test]
incremental = true
debug = true

#  Default release profile (https://doc.rust-lang.org/cargo/reference/profiles.html)
[profile.release]
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true

[workspace.dependencies]
sqltk = { version = "0.10.0" }
cipherstash-client = { version = "=0.34.1-alpha.4" }
cipherstash-config = { version = "=0.34.1-alpha.4" }
cts-common = { version = "=0.34.1-alpha.4" }

thiserror = "2.0.9"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "^0.3.20", features = [
  "ansi",
  "json",
  "env-filter",
  "std",
] }

# HOTFIX (CIP-3159): backport the stack-auth token-refresh CancelGuard fix onto
# the 0.34.1-alpha.4 source that cipherstash-client 0.34.1-alpha.4 pins. Without
# this, a cancelled get_token() future could strand `refresh_in_progress = true`,
# wedging all later refreshes and causing ZeroKMS "Request not authorized" exactly
# ~15 min (token TTL) after startup. The patch keeps version 0.34.1-alpha.4 so it
# satisfies cipherstash-client's exact pin while replacing the registry source.
# Remove once Proxy moves to a cipherstash-client built against stack-auth >= 0.36.0.
[patch.crates-io]
stack-auth = { path = "vendor/stack-auth" }
